--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@ const observer = new IntersectionObserver((entries) => {
       document.querySelector('.top-fixed').style.background = '#282f40';
       document.querySelector('.rwdbtn').style.boxShadow = '0px -1px 0px rgb(255, 255, 255), 0px -8px 0px white, 0px -15px 0px white';
       document.querySelector('#myCursor').style.borderColor = '#d9d9d9';
+      document.querySelector('.navbar-btn').style.background = '#282f40';
       document.querySelectorAll('.fontendsize').forEach((i)=>{
         i.style.color = '#fff9f0';
       });
@@ -418,6 +419,7 @@ const observer = new IntersectionObserver((entries) => {
       document.querySelector('.top-fixed').style.background = 'white';
       document.querySelector('.rwdbtn').style.boxShadow = '0px -1px 0px #282f40, 0px -8px 0px #282f40, 0px -15px 0px #282f40';
       document.querySelector('#myCursor').style.borderColor = '#a5a4a4';
+      document.querySelector('.navbar-btn').style.background = '#fff9f0';
       document.querySelectorAll('.fontendsize').forEach((i)=>{
         i.style.color = '#a5a4a4';
       });
