--- a/index.html
+++ b/index.html
@@ -316,13 +316,11 @@
         <div class="container-fluid pb-5">
           <div class="container contact-box">
             <h3 class="text-center Project-title color-b pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1">Contact</h3>
-              <div class="row">
-                  <div class="col-12 d-flex flex-column py-4">
-                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Tel：<a href="tel:0912176038" class="color-b contact-tel">0912176038</a></p>
-                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Line：<span class="color-b">zanki_meteor</span></p>
-                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Discord：<span class="color-b">Meteor#3795</span></p>
-                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></p>
-                  </div>
+              <div class="row py-4 justify-content-center align-items-center">
+                <div class="col-lg-3 col-md-6 color-b text-center py-1" data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Tel：<a href="tel:0912176038" class="color-b contact-tel">0912176038</a></div>
+                <div class="col-lg-3 col-md-6 color-b text-center py-1" data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Line：<span class="color-b">zanki_meteor</span></div>
+                <div class="col-lg-3 col-md-6 color-b text-center py-1" data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Discord：<span class="color-b">Meteor#3795</span></div>
+                <div class="col-lg-3 col-md-6 color-b text-center py-1" data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></div>
               </div>
             </div>
         </div>
