--- a/index.html
+++ b/index.html
@@ -327,8 +327,18 @@
       </div>
     </div>
     <!-- foot -->
-    <div class="container-fluid p-0">
-      <div class="row justify-content-center align-items-center m-0" style="background: white;">
+    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+      <defs>
+          <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+      </defs>
+      <g class="parallax">
+          <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(40, 47, 64,0.7)" />
+          <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(40, 47, 64,0.5)" />
+          <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(40, 47, 64,0.3)" />
+          <use xlink:href="#gentle-wave" x="48" y="7" fill="rgba(40, 47, 64,1)" />
+      </g>
+    </svg>      
+  <div class="row justify-content-center align-items-center m-0" style="background: rgba(40, 47, 64,1);">
         <div class="col-12 py-2 footer">
         </div>
       </div>
@@ -338,7 +348,7 @@
 <script>
 year = new Date().getFullYear();
 console.log(year);
-document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 color-b">© ${year} by Meteor.</p>`;
+document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 color-g">© ${year} by Meteor.</p>`;
 </script>
 <!-- scoll -->
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.0/dist/locomotive-scroll.min.js"></script>
