--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <!-- img -->
+    <link rel="stylesheet" href="/model/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css" integrity="sha512-NVt7pmp5f+3eWRPO1h4A1gCf4opn4r5z2wS1mi7AaVcTzE9wDJ6RzMqSygjDzYHLp+mAJ2/qzXXDHar6IQwddQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- main -->
     <link rel="stylesheet" href="main.css">
@@ -35,11 +36,10 @@
         <div class="container-md container-fluid top-box">
             <div class="row py-3 d-flex justify-content-md-between align-items-center">
                 <div class="pl-2 col-md-4 col-6 top-title d-flex align-items-center">
-                  <a href="https://zkmeteor.github.io/Vueindex/#/home" target="_blank">
+                  
                     <h4 class="m-0">
                       Meteor
                     </h4>
-                  </a>
                 </div>
                 <input type="checkbox" id="rwdbtn" class="d-none">
                 <div class="rwdbtnbox col-6">
@@ -57,6 +57,9 @@
                     </div>
                     <div class="py-2">
                       <a href="#photo" class="" data-scroll data-scroll-call="#photo">Photo</a>
+                    </div>
+                    <div class="py-2">
+                      <a href="#note" class="" data-scroll data-scroll-call="#note">Note</a>
                     </div>
                     <div class="py-2">
                         <a href="#contact" class="" data-scroll data-scroll-call="#contact">Contact</a>                
@@ -144,27 +147,27 @@
           <div class="container">
             <h3 class="text-center Project-title pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1">Project</h3>
             <div class="row project-box py-2" data-scroll>
-              <div class="col-md-3"data-scroll style="font-size: 1.5rem;font-family: Playfair Display, serif;"><p data-scroll>Type</p></div>
-              <div class="col-md-6"data-scroll style="font-size: 1.5rem;font-family: Playfair Display, serif;"><p data-scroll>Project</p></div>
-              <div class="col-md-3"data-scroll style="font-size: 1.5rem;font-family: Playfair Display, serif;"><p data-scroll>Introduction</p></div>
+              <div class="col-md-3 d-flex align-items-end"data-scroll style="font-size: 1.3rem;font-family: Playfair Display, serif;"><p data-scroll>Type</p></div>
+              <div class="col-md-6"data-scroll style="font-size: 1.3rem;font-family: Playfair Display, serif;"><p data-scroll>Project</p></div>
+              <div class="col-md-3 d-flex align-items-end"data-scroll style="font-size: 1.3rem;font-family: Playfair Display, serif;"><p data-scroll>Introduction</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
-            <div class="row project-box py-4" style="font-size: 3rem;" data-scroll>
-              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Web</p></div>
+            <div class="row project-box py-4"  data-scroll>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Web</p></div>
               <div class="col-md-6"><a target="_blank" href="https://zkmeteor.github.io/sm_web/#/"data-scroll data-scroll-offset="300">E-commerce</a></div>
-              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Vue</p></div>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Vue</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
-            <div class="row project-box py-4" style="font-size: 3rem;" data-scroll>
-              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Design</p></div>
+            <div class="row project-box py-4"  data-scroll>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Design</p></div>
               <div class="col-md-6 proj-imgbox"><a target="_blank" data-scroll data-scroll-offset="300" href="./assets/namepost.jpg">Poster</a></div>
-              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Ps&Ai</p></div>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Ps&Ai</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
-            <div class="row project-box py-4" style="font-size: 3rem;" data-scroll>
-              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Web</p></div>
+            <div class="row project-box py-4" data-scroll>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Web</p></div>
               <div class="col-md-6 proj-imgbox"><a target="_blank" data-scroll data-scroll-offset="300" href="https://zkmeteor.github.io/Vueindex/#/home">Blog</a></div>
-              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Practice</p></div>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Practice</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
 <!--               <div class="row py-5 d-flex justify-content-around align-items-center project-box">
@@ -249,13 +252,6 @@
             <h3 class="text-center Project-title color-b pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1">Photo</h3>
               <div class="row p-0 m-0">
                   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
-                      <!-- <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                      </div> -->
                       <div class="carousel-inner">
                         <div class="carousel-item active"> 
                           <img src="./assets/banner.jpg" class="d-block w-100" alt="...">
@@ -297,7 +293,58 @@
                         <span class="visually-hidden">Next</span>
                       </button>
                     </div>
+                    <!-- <div class="owl-carousel owl-theme">
+                      <div class="item" data-hash="slide1">
+                        <a href="./assets/banner.jpg" data-caption="Image caption">
+                          <img src="./assets/banner.jpg" alt="First image">
+                        </a>
+                      </div>
+                      <div class="item" >
+                        <img src="./assets/banner2.jpg" class="" alt="...">
+                      </div>
+                      <div class="item">
+                        <img src="./assets/banner3.jpg" class="" alt="...">
+                      </div>
+                      <div class="item">
+                        <img src="./assets/banner4.jpg" class="" alt="...">
+                      </div>
+                      <div class="item">
+                        <img src="./assets/namepost.jpg" class="" alt="...">
+                      </div>
+                  </div>
+                  <a href="#slide1">Slide 1</a> -->
+
+
+
+
+
               </div>
+          </div>
+          <div class="downbox top-link mt-3">
+            <a href="#note" data-scroll data-scroll-call="#note">
+              <div class="down-arrow"></div>
+              <div class="down-arrow"></div>
+            </a>
+          </div>
+          <div class="container my-5" id="note" data-scroll-id="#note"
+            style="height: 100px;">
+            <div class="col-6"
+            style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
+            <div class="col-6"></div>
+          </div>
+        </div>
+
+        <!-- note -->
+        <div class="container-fluid">
+          <div class="container">
+            <h3 class="text-center Project-title color-b pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1">Skill Note</h3>
+            <div class="row notebox">
+              <div class="">
+                <a href="https://codepen.io/ZKMeteor/pens/public" target="_blank" data-scroll data-scroll-offset="200">CodePen</a>
+                <a href="https://hackmd.io/@Ryf-CxRSSS2VN1kFzd8TlQ" target="_blank" data-scroll data-scroll-offset="200">HackMD</a>
+                <a href="https://github.com/ZKMeteor?tab=repositories" target="_blank" data-scroll data-scroll-offset="200">Github</a>
+              </div>
+            </div>
           </div>
           <div class="downbox top-link mt-3">
             <a href="#contact" data-scroll data-scroll-call="#contact">
@@ -312,6 +359,7 @@
             <div class="col-6"></div>
           </div>
         </div>
+
         <!-- contact -->
         <div class="container-fluid pb-5">
           <div class="container contact-box">
@@ -338,7 +386,7 @@
           <use xlink:href="#gentle-wave" x="48" y="7" fill="rgba(40, 47, 64,1)" />
       </g>
     </svg>      
-  <div class="row justify-content-center align-items-center m-0" style="background: rgba(40, 47, 64,1);">
+      <div class="row justify-content-center align-items-center m-0" style="background: rgba(40, 47, 64,1);">
         <div class="col-12 py-2 footer">
         </div>
       </div>
@@ -416,7 +464,6 @@ const observer = new IntersectionObserver((entries) => {
       });
       document.querySelectorAll('.project-box a').forEach((i)=>{
         i.style.color = '#fff9f0';
-        i.style.transition = '0.5s';
       });
       document.querySelectorAll('.project-box p').forEach((i)=>{
         i.style.color = '#fff9f0';
@@ -459,9 +506,8 @@ const observer = new IntersectionObserver((entries) => {
       });
       document.querySelectorAll('.project-box a').forEach((i)=>{
         i.style.color = '#a5a4a4';
-        i.style.transition = '0.5s';
       });
-      document.querySelectorAll('.project-box P').forEach((i)=>{
+      document.querySelectorAll('.project-box p').forEach((i)=>{
         i.style.color = '#a5a4a4';
         i.style.transition = '0.5s';
       });
@@ -495,9 +541,47 @@ window.onload = function() {
 };
 </script>
   <!-- img -->
-<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--   <script src="/model/jquery.js"></script>
+  <script src="/model/owl.carousel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
-      baguetteBox.run('.proj-imgbox', {
+
+$('.owl-carousel').owlCarousel({
+    animateOut: 'slideOutDown', //可以使用animate.css套件合作使用
+    animateIn: 'flipInX',
+    autoplay:true,            //自動播放
+    autoplayTimeout:1000,
+    autoplayHoverPause:true,  // hover時停止自動撥放
+    autoHeight:true,
+    URLhashListener:true,  //啟用a標籤跳轉
+    startPosition: 'URLHash',
+    loop:true, //是否重複
+    margin:10,
+    nav:true,//方向箭
+    center: true,//致中
+    stagePadding: 50,//左右填滿
+    rtl: false, //右至左
+    responsive:{
+        0:{
+            items:1,
+            nav:true
+        },
+        600:{
+            items:3,
+            nav:false
+        },
+        1000:{
+            items:5,
+            nav:true,
+            loop:false
+        }
+    }
+})
+
+
+
+
+      baguetteBox.run('.owl-carousel', {
         animation: 'fadeIn',
         noScrollbars: true
     });
@@ -509,6 +593,9 @@ window.onload = function() {
             this.style.transform = 'none';
         });
     });
+
+
+
   </script> -->
   <!-- bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
