--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
               <div class="col-12"></div>
             </div>
             <div class="row py-3 d-flex justify-content-center align-items-center">
-              <div class="about-yearbox col-md-5 col-10 py-2" data-scroll>
-                <span class="about-year" data-scroll data-scroll-sticky data-scroll-target=".about-yearbox">
+              <div class="about-yearbox col-md-5 col-10 py-2" data-scroll-container>
+                <header class="about-year" data-scroll data-scroll-sticky data-scroll-target=".about-yearbox" data-scroll-offset="-100">
                   2018</br>
                   -&nbsp;2022
-                </span>
+                </header>
               </div>
               <div class="col-md-7 col-10 py-5">
                 <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="-1">
@@ -251,7 +251,7 @@
           <div class="container-md container-fluid banner-box p-0">
             <h3 class="text-center Project-title color-b pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1">Photo</h3>
               <div class="row p-0 m-0">
-                  <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
+<!--                   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
                       <div class="carousel-inner">
                         <div class="carousel-item active"> 
                           <img src="./assets/banner.jpg" class="d-block w-100" alt="...">
@@ -292,31 +292,42 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                       </button>
-                    </div>
-                    <!-- <div class="owl-carousel owl-theme">
+                    </div> -->
+
+                    <div class="owl-carousel owl-theme">
                       <div class="item" data-hash="slide1">
-                        <a href="./assets/banner.jpg" data-caption="Image caption">
-                          <img src="./assets/banner.jpg" alt="First image">
+                        <a href="./assets/banner.jpg" data-caption="Tainan Art Museum">
+                          <img src="./assets/banner.jpg" alt="Tainan Art Museum">
                         </a>
                       </div>
                       <div class="item" >
-                        <img src="./assets/banner2.jpg" class="" alt="...">
+                        <a href="./assets/banner1.jpg" data-caption="Tainan Art Museum">
+                          <img src="./assets/banner1.jpg" alt="Tainan Art Museum">
+                        </a>
                       </div>
                       <div class="item">
-                        <img src="./assets/banner3.jpg" class="" alt="...">
+                        <a href="./assets/banner2.jpg" data-caption="Tainan Confucius Temple">
+                          <img src="./assets/banner2.jpg" alt="Tainan Confucius Temple">
+                        </a>
                       </div>
                       <div class="item">
-                        <img src="./assets/banner4.jpg" class="" alt="...">
+                        <a href="./assets/banner3.jpg" data-caption="Tainan Confucius Temple">
+                          <img src="./assets/banner3.jpg" alt="Tainan Confucius Temple">
+                        </a>
                       </div>
                       <div class="item">
-                        <img src="./assets/namepost.jpg" class="" alt="...">
+                        <a href="./assets/banner4.jpg" data-caption="Tainan Confucius Temple">
+                          <img src="./assets/banner4.jpg" alt="Tainan Confucius Temple">
+                        </a>
+                      </div>
+                      <div class="item">
+                        <a href="./assets/namepost.jpg" data-caption="Image caption">
+                          <img src="./assets/namepost.jpg" class="" alt="...">
+                        </a>
                       </div>
                   </div>
-                  <a href="#slide1">Slide 1</a> -->
 
-
-
-
+                  <a href="#slide1">Slide 1</a>
 
               </div>
           </div>
@@ -541,62 +552,64 @@ window.onload = function() {
 };
 </script>
   <!-- img -->
-<!--   <script src="/model/jquery.js"></script>
+  <script src="/model/jquery.js"></script>
   <script src="/model/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
 
-$('.owl-carousel').owlCarousel({
-    animateOut: 'slideOutDown', //可以使用animate.css套件合作使用
-    animateIn: 'flipInX',
-    autoplay:true,            //自動播放
-    autoplayTimeout:1000,
-    autoplayHoverPause:true,  // hover時停止自動撥放
-    autoHeight:true,
-    URLhashListener:true,  //啟用a標籤跳轉
-    startPosition: 'URLHash',
-    loop:true, //是否重複
-    margin:10,
-    nav:true,//方向箭
-    center: true,//致中
-    stagePadding: 50,//左右填滿
-    rtl: false, //右至左
-    responsive:{
-        0:{
-            items:1,
-            nav:true
-        },
-        600:{
-            items:3,
-            nav:false
-        },
-        1000:{
-            items:5,
-            nav:true,
-            loop:false
+document.addEventListener("DOMContentLoaded", function() {
+  
+    $('.owl-carousel').owlCarousel({
+        animateOut: 'slideOutDown', //可以使用animate.css套件合作使用
+        animateIn: 'flipInX',
+        autoplay:true,            //自動播放
+        autoplayTimeout:1000,
+        autoplayHoverPause:true,  // hover時停止自動撥放
+        autoHeight:true,
+        URLhashListener:true,  //啟用a標籤跳轉
+        startPosition: 'URLHash',
+        loop:true, //是否重複
+        margin:10,
+        nav:false,//方向箭
+        center: true,//致中
+        stagePadding: 50,//左右填滿
+        rtl: false, //右至左
+        responsive:{
+            0:{
+                items:1,
+                nav:true
+            },
+            600:{
+                items:3,
+                nav:false
+            },
+            1000:{
+                items:5,
+                nav:false,
+                loop:false
+            }
         }
-    }
-})
+    })
+  
+    /* baguetteBox.run('.owl-carousel', {
+      animation: 'fadeIn',
+      noScrollbars: true
+    }); */
+});
 
 
 
-
-      baguetteBox.run('.owl-carousel', {
-        animation: 'fadeIn',
-        noScrollbars: true
-    });
-
-    const projImgBoxes = document.querySelectorAll('.proj-imgbox');
+    /* const projImgBoxes = document.querySelectorAll('.owl-carousel');
 
     projImgBoxes.forEach(function(projImgBox) {
         projImgBox.addEventListener('click', function() {
             this.style.transform = 'none';
         });
-    });
+    }); */
 
 
 
-  </script> -->
+  </script>
   <!-- bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
