--- a/index.html
+++ b/index.html
@@ -103,30 +103,45 @@
         <div class="container-md container-fluid about-box">
           <h3 class="text-center about-title color-g pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1" >About</h3>
           <div class="row d-flex justify-content-center align-items-center py-5" style="position: relative;">
-              <div class="col-md-6 col-10 py-2">
-                <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="1">
-                  Hello! I'm Meteor, a web designer located in Tainan City. I specialize in web design and crafting visual identities.
-                </p>
-              </div>
-              <div class="col-md-5 col-6 py-2 about-imgbox">
-                <div class="about-img" data-scroll data-scroll-offset="400">
-                  <img src="./assets/myself.jpg" alt="myself" style="width: 100%;object-fit: cover;">
-                </div>
-              </div>
-              <div class="col-12"></div>
+            <div class="col-md-6 col-10 py-2">
+              <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="1">
+                Hello! I'm Meteor, a web designer located in Tainan City. I specialize in web design and crafting visual identities.
+              </p>
             </div>
-            <div class="row py-3 d-flex justify-content-center align-items-center">
-              <div class="about-yearbox col-md-5 col-10 py-2" data-scroll-container>
+            <div class="col-md-5 col-6 py-2 about-imgbox">
+              <div class="about-img" data-scroll data-scroll-offset="400">
+                <img src="./assets/myself.jpg" alt="myself" style="width: 100%;object-fit: cover;">
+              </div>
+            </div>
+          </div>
+          <div class="row py-3 d-flex justify-content-center align-items-center">
+              <div class="about-yearbox col-md-5 col-10 " data-scroll-container>
                 <header class="about-year" data-scroll data-scroll-sticky data-scroll-target=".about-yearbox" data-scroll-offset="-100">
-                  2018</br>
-                  -&nbsp;2022
+                  <div class="text-center">
+                    2018</br>
+                    -&nbsp;2022
+                  </div>
                 </header>
               </div>
-              <div class="col-md-7 col-10 py-5">
+              <div class="col-md-7 col-10">
                 <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="-1">
-                  I graduated from STUST. Typically, I enjoy perusing websites crafted by others, studying their designs, and incorporating elements into my own practice sites as I strive to enhance my skills for the future.                </p>
+                  I graduated from STUST. Typically, I enjoy perusing websites crafted by others, studying their designs, and incorporating elements into my own practice sites as I strive to enhance my skills for the future.</p>
               </div>
           </div>
+          <div class="row py-3 d-flex justify-content-center align-items-center flex-md-row flex-column-reverse">
+            <div class="col-md-7 col-10">
+              <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="-1">
+                目前在新創公司擔任網頁前端工程師，在任職期間有在外報名補習班，學習平面設計的相關技巧及工具，在目前的工作上也有負責製作DM及BANNER的設計。</p>
+            </div>
+            <div class="about-yearbox2 col-md-5 col-10 " data-scroll-container>
+              <header class="about-year" data-scroll data-scroll-sticky data-scroll-target=".about-yearbox2" data-scroll-offset="-100">
+                <div class="text-center">
+                  2023</br>
+                  -&nbsp;NOW
+                </div>
+              </header>
+            </div>
+        </div>
         </div>
         <div class="downbox top-link">
           <a href="#project" data-scroll data-scroll-call="#project">
@@ -251,7 +266,7 @@
           <div class="container-md container-fluid banner-box p-0">
             <h3 class="text-center Project-title color-b pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1">Photo</h3>
               <div class="row p-0 m-0">
-<!--                   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
+                  <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
                       <div class="carousel-inner">
                         <div class="carousel-item active"> 
                           <img src="./assets/banner.jpg" class="d-block w-100" alt="...">
@@ -292,9 +307,9 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                       </button>
-                    </div> -->
+                    </div>
 
-                    <div class="owl-carousel owl-theme">
+                    <!-- <div class="owl-carousel owl-theme">
                       <div class="item" data-hash="slide1">
                         <a href="./assets/banner.jpg" data-caption="Tainan Art Museum">
                           <img src="./assets/banner.jpg" alt="Tainan Art Museum">
@@ -327,7 +342,7 @@
                       </div>
                   </div>
 
-                  <a href="#slide1">Slide 1</a>
+                  <a href="#slide1">Slide 1</a> -->
 
               </div>
           </div>
@@ -552,14 +567,14 @@ window.onload = function() {
 };
 </script>
   <!-- img -->
-  <script src="/model/jquery.js"></script>
+<!--   <script src="/model/jquery.js"></script>
   <script src="/model/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script>
+ -->  <script>
 
 document.addEventListener("DOMContentLoaded", function() {
   
-    $('.owl-carousel').owlCarousel({
+    /* $('.owl-carousel').owlCarousel({
         animateOut: 'slideOutDown', //可以使用animate.css套件合作使用
         animateIn: 'flipInX',
         autoplay:true,            //自動播放
@@ -589,7 +604,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 loop:false
             }
         }
-    })
+    }) */
   
     /* baguetteBox.run('.owl-carousel', {
       animation: 'fadeIn',
