--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="row py-3 d-flex justify-content-center align-items-center flex-md-row flex-column-reverse">
             <div class="col-md-7 col-10">
               <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="-1">
-                目前在新創公司擔任網頁前端工程師，在任職期間有在外報名補習班，學習平面設計的相關技巧及工具，在目前的工作上也有負責製作DM及BANNER的設計。</p>
+                I am currently working as a Front-End Web Developer at a startup company. During my tenure, I have also enrolled in courses outside of work to learn graphic design skills and tools. In my current role, I am responsible for designing DM and banners.</p>
             </div>
             <div class="about-yearbox2 col-md-5 col-10 " data-scroll-container>
               <header class="about-year" data-scroll data-scroll-sticky data-scroll-target=".about-yearbox2" data-scroll-offset="-100">
