--- a/index.html
+++ b/index.html
@@ -497,10 +497,10 @@ const observer = new IntersectionObserver((entries) => {
       });
     } else {
       document.querySelector('body').style.background = '#fffdf5';
-      document.querySelector('.top-fixed').style.background = 'white';
+      document.querySelector('.top-fixed').style.background = '#fffdf5';
       document.querySelector('.rwdbtn').style.boxShadow = '0px -1px 0px #282f40, 0px -8px 0px #282f40, 0px -15px 0px #282f40';
       document.querySelector('#myCursor').style.borderColor = '#a5a4a4';
-      document.querySelector('.navbar-btn').style.background = 'white';
+      document.querySelector('.navbar-btn').style.background = '#fffdf5';
       document.querySelectorAll('.fontendsize').forEach((i)=>{
         i.style.color = '#a5a4a4';
       });
