--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <!-- img -->
     <!-- <link rel="stylesheet" href="/model/owl.carousel.min.css"/> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css" integrity="sha512-NVt7pmp5f+3eWRPO1h4A1gCf4opn4r5z2wS1mi7AaVcTzE9wDJ6RzMqSygjDzYHLp+mAJ2/qzXXDHar6IQwddQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <!-- aos -->
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <!-- main -->
     <link rel="stylesheet" href="main.css">
 </head>
@@ -133,8 +135,8 @@
             <div class="about-yearbox2 col-md-5 col-10 " data-scroll-container>
               <header class="about-year" data-scroll data-scroll-sticky data-scroll-target=".about-yearbox2" data-scroll-offset="-100">
                 <div class="text-center">
-                  2023</br>
-                  -&nbsp;NOW
+                  2023.04</br>
+                  -&nbsp;2024.06
                 </div>
               </header>
             </div>
@@ -166,20 +168,20 @@
             </div>
             <div class="row project-box py-4"  data-scroll>
               <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Web</p></div>
-              <div class="col-md-6"><a target="_blank" href="https://zkmeteor.github.io/sm_web/#/"data-scroll data-scroll-offset="300">E-commerce</a></div>
-              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Vue</p></div>
+              <div class="col-md-6"><a target="_blank" href="https://zkmeteor.github.io/sm_web/#/"data-scroll data-scroll-offset="300" >E-commerce</a></div>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">E-commerce platform imitation</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
             <div class="row project-box py-4"  data-scroll>
               <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Design</p></div>
               <div class="col-md-6 proj-imgbox"><a target="_blank" data-scroll data-scroll-offset="300" href="./assets/namepost.jpg">Poster</a></div>
-              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Ps&Ai</p></div>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Poster Derivative work</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
             <div class="row project-box py-4" data-scroll>
               <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Web</p></div>
               <div class="col-md-6 proj-imgbox"><a target="_blank" data-scroll data-scroll-offset="300" href="https://zkmeteor.github.io/Vueindex/#/home">Blog</a></div>
-              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">Practice</p></div>
+              <div class="col-md-3 d-flex align-items-end"><p style="font-family: Playfair Display, serif;font-size: 1.5em;"data-scroll data-scroll-offset="300">University Practice</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
 <!--               <div class="row py-5 d-flex justify-content-around align-items-center project-box">
@@ -421,6 +423,11 @@ year = new Date().getFullYear();
 console.log(year);
 document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 color-g">© ${year} by Meteor.</p>`;
 </script>
+<!-- aos -->
+<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script> -->
 <!-- scoll -->
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.0/dist/locomotive-scroll.min.js"></script>
 <script>
